Fix spacing on .code when used in a paragraph

--- a/css/src/_typography.css
+++ b/css/src/_typography.css
@@ -143,6 +143,7 @@ li {
 .code {
   display: inline-block;
   padding: 0.1em 0.4em;
+  line-height: $line-height; /* so it doesn't look strange in <p> */
   color: $code-text-color;
   background-color: $code-background-color;
   border: 1px solid $light-gray1;
